# alex

./: README.md  grammar.bnf  pyproject.toml
alex/: __init__.py  __main__.py
tests/: __init__.py  test_failure.py  test_success.py
