[tool.poetry]
name = "alex"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
jedi = "^0.13.1"
autopep8 = "^1.4"
mypy = "^0.641.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
